flux/apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
spec:
  type: ClusterIP
  selector:
    app: ntfy-pod
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort: http-ntfy
