flux/apps/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: ntfy
spec:
  entryPoints:
    - web
    - websecure
   routes:
     - match: Host(`ntfy.misery.systems`)
       kind: Rule
       middlewares:
         - name: traefik-https-redirect
           namespace: traefik
       services:
         - name: ntfy
           port: 80
  tls:
    secretName: ntfy-tls
